<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fblogo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logogradient"
    android:orientation="vertical"
    tools:context=".LinearLayout.LoginPage"
    tools:ignore="MissingClass">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="blue"
            android:backgroundTint="#4CAF50"
            android:ems="10"
            android:fontFamily="@font/averia_sans_libre_bold"
            android:inputType="textPersonName"
            android:shadowColor="#B89696"
            android:text="@string/zinenic"
            android:textColor="#114C19"
            android:textSize="60sp"
            tools:ignore="LabelFor,RtlHardcoded,VisualLintTextFieldSize"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""

            android:ems="40"
            android:gravity="center"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp"
            tools:ignore="InefficientWeight,TextContrastCheck,VisualLintTextFieldSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ems="40"
            android:gravity="center"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:textColor="#D0D6DFD7"
            android:textColorHint="#FFFFFF"
            android:textSize="24sp"
            tools:ignore="InefficientWeight,TextContrastCheck,VisualLintTextFieldSize"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button"
            android:layout_width="280dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="63dp"
            android:layout_weight="1"
            android:background="@drawable/buttonstyling"
            android:gravity="center"
            android:shadowRadius="?attr/actionBarSize"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:cornerRadius="@android:dimen/dialog_min_width_major"
            app:strokeColor="#B59595"

            tools:ignore="InefficientWeight,RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="transparent"
            android:fontFamily="@font/abel"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="InefficientWeight,TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal"
        tools:ignore="UselessLeaf">


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_weight="1"
            android:background="transparent"
            android:drawableLeft="@drawable/ic_fb"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:textAlignment="inherit"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/button5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_weight="1"
            android:background="transparent"
            android:drawableLeft="@drawable/ic_twitter"
            android:text="@string/twitter"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded,TextContrastCheck" />


    </LinearLayout>

</LinearLayout>

